# jccc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/codegen/: README.md  codegen.c  codegen.h
src/codegen/RISCV/: codegen.c  codegen.h
src/codegen/x86/: codegen.c  codegen.h  test_x86.c  test_x86.h
src/driver/: README.md  main.c
src/lexer/: lex.c  lex.h  test_lexer.c  test_lexer.h  token.h
src/parser/: cst.h  parse.c  parse.h
src/testing/: README.md  main.c  tassert.h  test_utils.c  test_utils.h
src/util/: hash.c  hash.h  hashmap.c  hashmap.h  list.c  list.h  out.h  test_hash.c  test_hash.h  test_list.c  test_list.h  test_util.c  test_util.h
tests/: identtest.c  lextest.c  mathtest.c  optest.c  simplemain.c
